# UniFile

./: .gitignore  ATTRIBUTION.md  CHANGELOG.md  CLAUDE.md  CONTINUATION_PROMPT.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  SECURITY.md  UniFile.spec  audit2.txt  cats.txt  pyproject.toml  requirements.txt  run.py  smoke86_out.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: release.yml  tests.yml
tests/: audit_out.txt  check_cats.py  conftest.py  smoke_v86.py  smoke_v87.py  smoke_v88.py  smoke_v89.py  test_archive_inference.py  test_category_consistency.py  test_cli_validate_rules.py  test_critical.py  test_current_item_signal.py  test_empty_state_action.py  test_engine.py  test_hardening.py  test_ignore.py  test_learning.py  test_main_window_smoke.py  test_models.py  test_naming.py  test_per_folder_rules.py  test_py310_fstring_compat.py  test_tab_order.py  test_v91_features.py  test_v92_features.py  test_v93_features.py
unifile/: __init__.py  __main__.py  ai_providers.py  apply_mixin.py  archive_indexer.py  archive_inference.py  bootstrap.py  cache.py  categories.py  classifier.py  cleanup.py  config.py  csv_rules.py  dialogs_mixin.py  duplicates.py  embedding.py  engine.py  files.py  filter_mixin.py  ignore.py  inbox.py  learning.py  main_window.py  metadata.py  models.py  musicbrainz_tagger.py  naming.py  nexa_backend.py  ocr_indexer.py  ollama.py  photos.py  plugins.py  profiles.py  query_history.py  ratings.py  saved_searches.py  scan_mixin.py  search_parser.py  semantic.py  shell_integration.py  (+11 more)
unifile/dialogs/: __init__.py  accessibility.py  advanced_settings.py  archive_indexer_dialog.py  cleanup.py  command_palette.py  common.py  duplicates.py  editors.py  inbox_dialog.py  media_lookup.py  saved_searches_dialog.py  settings.py  settings_hub.py  shell_integration_dialog.py  tag_library.py  theme.py  tools.py  virtual_library_panel.py
unifile/media/: __init__.py  providers.py
unifile/tagging/: __init__.py  db.py  library.py  models.py
